# MetodyNumeryczne_lib

./: CMakeLists.txt  Makefile  README.md
examples/: example_approximation.cpp  example_diffeq.cpp  example_integration.cpp  example_interpolation.cpp  example_lineq.cpp  example_nonlinear.cpp
include/: approximation.h  diffeq.h  integration.h  interpolation.h  lineq.h  nonlinear.h  numlib.h
src/: approximation.cpp  diffeq.cpp  integration.cpp  interpolation.cpp  lineq.cpp  nonlinear.cpp
tests/: test_approximation.cpp  test_diffeq.cpp  test_integration.cpp  test_interpolation.cpp  test_lineq.cpp  test_nonlinear.cpp
